[gd_scene load_steps=27 format=2]

[ext_resource path="res://cars/cam.gd" type="Script" id=1]
[ext_resource path="res://assets/carAudio/car-drive.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/carAudio/Sports-Car-Idle.mp3" type="AudioStream" id=3]
[ext_resource path="res://cars/car_script.gd" type="Script" id=4]
[ext_resource path="res://assets/nametag.png" type="Texture" id=5]
[ext_resource path="res://cars/special_particle_particlesmaterial.tres" type="Material" id=6]
[ext_resource path="res://assets/audio/pop2.wav" type="AudioStream" id=7]
[ext_resource path="res://cars/grass_particle_material.tres" type="Material" id=8]
[ext_resource path="res://cars/sand_particle_material.tres" type="Material" id=9]
[ext_resource path="res://cars/binary_particle_material.tres" type="Material" id=10]
[ext_resource path="res://addons/smoothing/smoothing.gd" type="Script" id=11]

[sub_resource type="Curve" id=2]
max_value = 60.0
_data = [ Vector2( 0, 8.38636 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 16.7273, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
width = 60
curve = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.025, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.7625, 0.459091 ), -1.04863, -1.04863, 0, 0, Vector2( 1, 0 ), 0.656319, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, -0.4, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.22
linear_accel_curve = SubResource( 19 )
radial_accel = 2.97
radial_accel_random = 0.86
damping = 4.44
angle = -28.2
angle_random = 1.0
scale = 0.5
scale_random = 0.49
scale_curve = SubResource( 20 )
hue_variation = 0.1
hue_variation_random = 0.27

[sub_resource type="SpatialMaterial" id=21]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.823529, 0.819608, 0.819608, 0.854902 )

[sub_resource type="SphereMesh" id=8]
material = SubResource( 21 )
radius = 0.6
height = 1.0
radial_segments = 5
rings = 4

[sub_resource type="QuadMesh" id=16]
material = ExtResource( 8 )

[sub_resource type="QuadMesh" id=17]
material = ExtResource( 8 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4.5, 1.5, 13 )

[sub_resource type="DynamicFontData" id=14]
antialiased = false
hinting = 1
font_path = "res://themes/upheavtt.ttf"

[sub_resource type="DynamicFont" id=15]
size = 28
extra_spacing_top = -4
font_data = SubResource( 14 )

[sub_resource type="BoxShape" id=13]

[sub_resource type="PhysicsMaterial" id=10]
absorbent = true

[sub_resource type="SphereShape" id=18]

[node name="default_car" type="Spatial"]
script = ExtResource( 4 )
turn_stop_limit = 0.5
sphere_offset = Vector3( 0, -1, 0 )
_Material1 = ExtResource( 8 )
_Material2 = ExtResource( 9 )
_Material3 = ExtResource( 10 )

[node name="Camera" type="InterpolatedCamera" parent="."]
doppler_tracking = 2
far = 300.0
target = NodePath("../car/target")
speed = 20.0
enabled = true
script = ExtResource( 1 )

[node name="car" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
script = ExtResource( 11 )
target = NodePath("../car_wrapper")

[node name="target" type="Position3D" parent="car"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 4, 7.2 )

[node name="TypeRay" type="RayCast" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
collision_mask = 32768

[node name="GroundRay" type="RayCast" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true

[node name="SpecialSound" type="AudioStreamPlayer3D" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 7 )
attenuation_model = 1
bus = "Special_sound"
emission_angle_filter_attenuation_db = -14.2
doppler_tracking = 2

[node name="Sound" type="AudioStreamPlayer3D" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00750446, 1, -0.00409985 )
stream = ExtResource( 2 )
attenuation_model = 1
unit_db = -25.487
unit_size = 7.7
max_distance = 108.74
bus = "car_sound"
emission_angle_filter_attenuation_db = -14.2
doppler_tracking = 2

[node name="IdleSound" type="AudioStreamPlayer3D" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 3 )
attenuation_model = 1
unit_size = 2.0
bus = "idle_car_sound"
emission_angle_filter_attenuation_db = -14.2
doppler_tracking = 2

[node name="Particles2" type="Particles" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0913, 0.328551, 1.81493 )
emitting = false
amount = 25
speed_scale = 0.8
visibility_aabb = AABB( -2.34941, -1.74483, -4.13106, 4.69883, 3.48966, 8.26212 )
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="Particles" type="Particles" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.590142, 0.181523, 1.45859 )
emitting = false
amount = 25
speed_scale = 0.8
randomness = 0.04
visibility_aabb = AABB( -2.34941, -1.71137, -4.63678, 4.69883, 3.42274, 9.27356 )
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="Particles_special" type="Particles" parent="car"]
transform = Transform( 0.950938, 0, -0.309382, 0, 1, 0, 0.309382, 0, 0.950938, -0.2228, 0.328551, 0.298783 )
emitting = false
amount = 60
lifetime = 0.7
speed_scale = 0.4
visibility_aabb = AABB( -2.34941, -1.74483, -2.97383, 4.69883, 3.48966, 8.26212 )
local_coords = false
process_material = ExtResource( 6 )
draw_pass_1 = SubResource( 16 )

[node name="Particles_special2" type="Particles" parent="car"]
transform = Transform( 0.95657, 0, 0.291504, 0, 1, 0, -0.291504, 0, 0.95657, 0.559413, 0.328551, 0.303685 )
emitting = false
amount = 60
lifetime = 0.7
speed_scale = 0.4
randomness = 1.0
visibility_aabb = AABB( -2.34941, -1.74483, -4.61846, 4.69883, 3.48966, 9.23691 )
local_coords = false
process_material = ExtResource( 6 )
draw_pass_1 = SubResource( 17 )

[node name="SlipStream" type="Area" parent="car"]

[node name="SlipStreamCollider" type="CollisionShape" parent="car/SlipStream"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -15.7627 )
shape = SubResource( 1 )

[node name="meshs" type="Spatial" parent="car"]

[node name="car" type="Spatial" parent="car/meshs"]

[node name="body" type="MeshInstance" parent="car/meshs/car"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
skeleton = NodePath("../../../..")

[node name="wheel_front_left" type="MeshInstance" parent="car/meshs/car"]
skeleton = NodePath("../../../..")

[node name="wheel_front_right" type="MeshInstance" parent="car/meshs/car"]
skeleton = NodePath("../..")

[node name="wheel_back_right" type="MeshInstance" parent="car/meshs/car"]
skeleton = NodePath("../..")

[node name="wheel_back_left" type="MeshInstance" parent="car/meshs/car"]
skeleton = NodePath("../..")

[node name="nametag_sprite" type="Sprite3D" parent="car"]
pause_mode = 1
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 2.2, 0 )
cast_shadow = 0
use_in_baked_light = true
generate_lightmap = false
flip_v = true
pixel_size = 0.03
billboard = 1

[node name="nametag_viewport" type="Viewport" parent="car/nametag_sprite"]
size = Vector2( 200, 25 )
transparent_bg = true
gui_disable_input = true

[node name="nametag" type="Label" parent="car/nametag_sprite/nametag_viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
text = "[Nametag]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nametag_Background" type="TextureRect" parent="car/nametag_sprite/nametag_viewport"]
margin_right = 200.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car_mesh_hitbox" type="StaticBody" parent="car"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 131072
collision_mask = 16384

[node name="car_mesh_aabb" type="CollisionShape" parent="car/car_mesh_hitbox"]
shape = SubResource( 13 )

[node name="Ball" type="RigidBody" parent="."]
collision_layer = 4098
collision_mask = 4097
physics_material_override = SubResource( 10 )
gravity_scale = 10.0
continuous_cd = true
can_sleep = false

[node name="collision" type="CollisionShape" parent="Ball"]
shape = SubResource( 18 )

[node name="car_wrapper" type="Spatial" parent="."]

[connection signal="finished" from="car/SpecialSound" to="." method="_on_SpecialSound_finished"]
[connection signal="area_shape_entered" from="car/SlipStream" to="." method="_on_slipstream_entered"]
[connection signal="area_shape_exited" from="car/SlipStream" to="." method="_on_slipstream_exited"]
[connection signal="body_entered" from="car/SlipStream" to="." method="_on_SlipStream_body_entered"]
[connection signal="body_exited" from="car/SlipStream" to="." method="_on_SlipStream_body_exited"]
